firebase 임시 프로젝트로 적용

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,5 +11,6 @@
   "start_url": "http://localhost:3000/",
   "display": "standalone",
   "theme_color": "#f8f0f0",
-  "background_color": "#3F688C"
+  "background_color": "#3F688C",
+  "gcm_sender_id": "103953800507"
 }
