--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "typescript": "^3.4.5"
   },
   "scripts": {
+    "fix-sw": "node ./src/sw-fix.js",
     "start": "cross-env NODE_PATH=src react-scripts start",
-    "build": "cross-env NODE_PATH=src react-scripts build",
+    "build": "cross-env NODE_PATH=src react-scripts build && npm run fix-sw",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
