--- a/package.json
+++ b/package.json
@@ -3,17 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.0",
+    "axios": "0.19.0",
     "classnames": "^2.2.6",
     "create-react-app": "^3.0.1",
     "firebase": "^5.11.1",
-    "grommet": "^2.7.0",
-    "grommet-icons": "^4.2.0",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.12.0",
     "react": "^16.8.5",
